detailed explanations and examples.  For convenience, here's a url to
one of the relevant sections:
  http://www.gnu.org/software/texinfo/manual/texinfo/html_node/Document-Permissions.html

-------------------------------------------------------------------------------
* Language:
  . You can now optionally miss out the @menu from nodes with other
    nodes below them in the document structure.  If you use 
    "@validatemenus off" near the start of a Texinfo file,
    makeinfo will, where needed, create a menu for nodes lacking one 
    given explicitly.

* makeinfo
  . quotation marks are left out for node names and index entries in
    Info output where they would have been produced by commands such
    as @file or @option.

* info
  . internal changes to reduce memory use and increase speed of
    searches, relative to last release


6.0 (26 June 2015)
* Language:
  . new commands @sub and @sup, for textual subscripts and superscripts.
  . new command @U to insert a Unicode character by code point.

* texinfo.tex:
  . @url/@uref output in PDF now the same as in DVI, showing the url
    even if the second argument is given, not just as a link target.
    TeX option \urefurlonlylinktrue gives previous behavior, of invisible urls.
    PDF-only \linkcolor and \urlcolor specify colors (default black).

* texi2any:
  . customization variable TOP_NODE_UP_URL now replaces all (dir) references;
    recommended setting for GNU packages is /manual/.
  . new customization variable INDEX_SPECIAL_CHARS_WARNING to complain
    when index entries contain a colon.
  . Docbook output no longer uses <lineannotation> for @r.
  . -D'var val' on the command line works as intended again.
  . --plaintext output can be split.
  . a bit faster.

* info:
  . invoking as `info foo bar' looks for bar as an index entry in manual
    foo, if not found as a top-level menu item.
  . invoking info with an absolute or explicitly relative file name